--- a/client/views/pages/home.html
+++ b/client/views/pages/home.html
@@ -15,4 +15,6 @@
       <p>Our priority is to enhance your status of "Great Neighbor" by maintaining a positive community sensitivity. If your project is a remodel, we strive for a minimum of invasiveness to you and your neighbors. All in all, we are trusting that your exceptional experience with Hastings Fine Homes will have you telling your friends and colleagues about us.
       </p>
     </div>
+
+  </article>
 </template>
