--- a/client/main.less
+++ b/client/main.less
@@ -10,6 +10,8 @@
 @import 'views/pages/history.lessimport';
 @import 'views/pages/contact.lessimport';
 
+@import 'views/widgets/carousel.lessimport';
+
 // Util
 
 #text {
