--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,17 +1,18 @@
 <template name="header">
 <header>
-  <div id="logo">
-    <a href="{{pathFor 'home'}}">
-      <div>HastingsFineHomes</div>
-    </a>
-  </div>
-  <div class="right">
+  <div class="top">
+    <div id="logo">
+      <a href="{{pathFor 'home'}}">
+        <div>Hastings Fine Homes</div>
+      </a>
+    </div>
+
     <div id="contact-top">
       <div>650.350.1066</div>
       <div>925.838.0108</div>
       <div>info@hastingsfinehomes.com</div>
     </div>
-    {{> nav}}
   </div>
+    {{> nav}}
 </header>
 </template>
