--- a/client/views/pages/history.html
+++ b/client/views/pages/history.html
@@ -1,6 +1,6 @@
 <template name="history">
 <aside class="sidebar">
-  <img src="/images/tom.jpg" alt="Tom Hastings">
+  <img src="/images/tom_sm.jpg" alt="Tom Hastings">
 </aside>
     
 <article class="history">
