--- a/client/views/pages/contact.html
+++ b/client/views/pages/contact.html
@@ -4,12 +4,12 @@
     <div class="info">
       <p>Hastings Fine Homes, Inc</p>
       <p>General Contractor</p>
-      <p>Licence #973013</p>
+      <p>License #973013</p>
       <p>info@hastingsfinehomes.com</p>
     </div>
     <div class="addresses">
       <div class="address">
-        <p>63 Boved Road #404</p>
+        <p>63 Bovet Road #404</p>
         <p>San Mateo, Ca 94402</p>
         <p>650.350.1066</p>
       </div>
