Updated History page copy.

--- a/client/views/pages/history.html
+++ b/client/views/pages/history.html
@@ -5,10 +5,14 @@
     
 <article class="history">
   <p>
-     We at The Hastings Company have been specializing in custom home construction for more than 30 years.  We began as a small, family-based company and, as we’ve expanded, have maintained the personalized relationships with our clients that are so important to us.  It is our belief that quality construction on a reasonable budget will satisfy clients and will see us through good markets and bad.  Our Build-to-Suit and Speculative-Home clients appreciate our ability to work within their budgets and schedules to provide top-quality homes.  We have enjoyed working in the finest neighborhoods on the premier properties of Northern California.
+    You might say building is in my DNA.  Some of my earliest memories are of construction sites.  At a very young age, I started helping to keep our jobsites free of construction debris.  My Dad, Doyle Hastings started building custom homes in 1970, the year before I was born.  His father and his three brothers were all carpenters and then contractors and for many years worked with us.
+
   </p>
   <p>
-    We look forward to helping you achieve your construction dreams.
+    Summers at home from UC Irvine were spent doing project management for Dad’s company.  After graduation, I spent a few years living and working in Japan.  During this time, while home on vacation, I met my beautiful wife, Cori.  When we went to Japan to finish up my contract, we both knew that our real home, the San Francisco Bay area was waiting for us.  I had many options at this point, but it seems I always knew that building fine homes for happy families was my dream.   Cori and I have 8 year old twins, Grant and Chelsea. 
+  </p>
+  <p>
+    Generational Integrity.  We are living our dream by building yours.
   </p>
   <aside class="signature">
     Tom Hastings<br />
