Added builder-trend contact.

--- a/client/views/pages/contact.html
+++ b/client/views/pages/contact.html
@@ -1,27 +1,38 @@
 <template name="contact">
-  <div class="background"></div>
-  <div class="contacts">
-    <div class="info">
-      <p>Hastings Fine Homes, Inc</p>
-      <p>General Contractor</p>
-      <p>License #973013</p>
-      <p>info@hastingsfinehomes.com</p>
-    </div>
-    <div class="addresses">
-      <div class="address">
-        <p>63 Bovet Road #404</p>
-        <p>San Mateo, Ca 94402</p>
-        <p>650.350.1066</p>
+  <div id="contact">
+    <div class="background"></div>
+    <div class="contacts">
+      <div class="info">
+        <p>Hastings Fine Homes, Inc</p>
+        <p>General Contractor</p>
+        <p>License #973013</p>
+        <p>info@hastingsfinehomes.com</p>
       </div>
-      <div class="address">
-        <p>696 San Ramon Valley Blvd. #507</p>
-        <p>Danville, Ca 94526</p>
-        <p>925.838.0108</p>
+      <div class="addresses">
+        <div class="address">
+          <p>63 Bovet Road #404</p>
+          <p>San Mateo, Ca 94402</p>
+          <p>650.350.1066</p>
+        </div>
+        <div class="address">
+          <p>696 San Ramon Valley Blvd. #507</p>
+          <p>Danville, Ca 94526</p>
+          <p>925.838.0108</p>
+        </div>
       </div>
-    </div>
-    <div class="contact">
-      <p>Tom Hastings</p>
-      <p>President</p>
+      <div class="contact">
+        <p>Tom Hastings</p>
+        <p>President</p>
+      </div>
+      <div class="buildertrend">
+        <h2> Contact Us! </h2>
+        <!-- Begin Contact Form -->
+        <script type="text/javascript">window.jQuery || document.write('<script src="//code.jquery.com/jquery-1.8.0.min.js"><\/script>')</script>
+        <script type="text/javascript">    var btDomain = "http://www.buildertrend.net";</script>
+        <script type="text/javascript" src="http://www.buildertrend.net/leads/contactforms/js/btLeadsContactFormClient.js"></script>
+        <iframe id="btLeadsContactiFrame" src="http://www.buildertrend.net/leads/contactforms/leadGenerator.aspx?builderID=2708&theme=a&url=http://www.hastingsfinehomes.com/" style="width:400px;height:300px;border:0;background:transparent;"></iframe>
+        <!-- End Contact Form -->
+      </div>
     </div>
   </div>
 </template>
