Added some logic for the projects page. Still need to actually pull the pics, but very easy, also need to figure how to load sub photos of a project only when they are needed.

--- a/client/views/pages/projects.html
+++ b/client/views/pages/projects.html
@@ -1,1 +1,13 @@
-<template name="projects"></template>
+<template name="projects">
+<div id="projects">
+  {{#each project}}
+    <a class="project fancybox" rel="{{title}}" href="{{url}}">
+      <img href="{{thumbnail}}" />
+      {{!-- Links for other photos in the set --}}
+      {{#each subphotos}}
+      <a href="{{url}}" class="fancybox"></a> {{!-- These should have display none --}}
+      {{/each}}
+    </a>
+  {{/each}}
+</div>
+</template>
