Added projects page.

--- a/client/views/layout/nav.html
+++ b/client/views/layout/nav.html
@@ -1,7 +1,7 @@
 <template name="nav">
 <nav>
   <ul>
-    <!-- {{!&#45;&#45; <li><a href="{{pathFor 'projects'}}">Projects</a></li> &#45;&#45;}} -->
+    <li><a href="{{pathFor 'projects'}}">Projects</a></li>
     <li><a href="{{pathFor 'testimonials'}}">Testimonials</a></li>
     <li><a href="{{pathFor 'history'}}">History</a></li>
     <li><a href="{{pathFor 'contact'}}">Contact</a></li>
