--- a/client/main.less
+++ b/client/main.less
@@ -1,7 +1,6 @@
 //Imports
 @import "/packages/bootstrap3-less/bootstrap.lessimport";
-
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display|Quattrocento|EB+Garamond|Judson);
+@import url('http://fonts.googleapis.com/css?family=Playfair+Display|Quattrocento|EB+Garamond|Judson');
 @import 'views/layout/layout.lessimport';
 @import 'views/layout/header.lessimport';
 @import 'views/layout/nav.lessimport';
