Photo stack and tweaks.

--- a/client/views/layout/nav.html
+++ b/client/views/layout/nav.html
@@ -1,6 +1,7 @@
 <template name="nav">
 <nav>
   <ul>
+    <li><a href="{{pathFor 'home'}}">Home</a></li>
     <li><a href="{{pathFor 'projects'}}">Projects</a></li>
     <li><a href="{{pathFor 'testimonials'}}">Testimonials</a></li>
     <li><a href="{{pathFor 'history'}}">History</a></li>
