--- a/client/views/pages/contact.html
+++ b/client/views/pages/contact.html
@@ -1,6 +1,8 @@
 <template name="contact">
   <div id="contact">
-    <div class="background"></div>
+    <div class="background">
+      <img src="/images/sink.jpg" alt="" class="strech" />
+    </div>
     <div class="contacts">
       <div class="info">
         <p>Hastings Fine Homes, Inc</p>
