Fixed google font.

--- a/client/main.less
+++ b/client/main.less
@@ -1,6 +1,5 @@
 //Imports
 @import "/packages/bootstrap3-less/bootstrap.lessimport";
-@import url('http://fonts.googleapis.com/css?family=Playfair+Display|Quattrocento|EB+Garamond|Judson');
 @import 'views/layout/layout.lessimport';
 @import 'views/layout/header.lessimport';
 @import 'views/layout/nav.lessimport';
@@ -12,6 +11,19 @@
 @import 'views/pages/contact.lessimport';
 
 @import 'views/widgets/carousel.lessimport';
+
+// Font
+
+@font-face {
+  font-family: Quattrocento;
+  font-weight: normal;
+  src: url(/fonts/Quattrocento-Regular.ttf);
+}
+@font-face {
+  font-family: Quattrocento;
+  font-weight: bold;
+  src: url(/fonts/Quattrocento-Regular.ttf);
+}
 
 // Util
 
