Added Featured Home menu item and testimonial text.

--- a/client/views/pages/testimonials.html
+++ b/client/views/pages/testimonials.html
@@ -1,5 +1,10 @@
 <template name="testimonials">
   <section class="testimonials">
+    <article class="intro">
+      <p>
+        Great client relationships are what we value most at Hastings Fine Homes. It is always humbling to have past clients who welcome you back into their homes and  trust you with their best friends.We believe that our friends become clients and our clients become friends. Here are a few words from our friends...
+      </p>
+    </article>
     <article class="testimonial">
       <p>
         I have used Tom Hastings and Hastings Fine Homes as a resource for clients and my own use for several years now, and his knowledge of the construction and design process is unbeaten in the industry.  Tom has a saying that he “saves owners from themselves”, meaning he helps people make smart design and construction decisions that will meet their needs and be salable later.  I work primarily in the premium markets of North Palo Alto, Portola Valley and Woodside, so bad design or functionality decisions can mean hundreds of thousands of dollars of lost equity down the road.
