--- a/client/views/layout/nav.html
+++ b/client/views/layout/nav.html
@@ -3,6 +3,7 @@
   <ul>
     <li><a href="{{pathFor 'home'}}">Home</a></li>
     <li><a href="{{pathFor 'projects'}}">Projects</a></li>
+    <li><a href="{{pathFor 'homan'}}">Featured Home</a></li>
     <li><a href="{{pathFor 'testimonials'}}">Testimonials</a></li>
     <li><a href="{{pathFor 'history'}}">History</a></li>
     <li><a href="{{pathFor 'contact'}}">Contact</a></li>
