Added splitview template to handle before/after images.

--- a/client/main.less
+++ b/client/main.less
@@ -5,6 +5,7 @@
 @import 'views/layout/nav.lessimport';
 
 @import 'views/pages/home.lessimport';
+@import 'views/pages/homan.lessimport';
 @import 'views/pages/projects.lessimport';
 @import 'views/pages/testimonials.lessimport';
 @import 'views/pages/history.lessimport';
