--- a/client/views/widgets/carousel.html
+++ b/client/views/widgets/carousel.html
@@ -16,7 +16,7 @@
       <div class="carousel-inner">
         {{#each_with_index this}}
         <div class="item {{#if first index}}active{{/if}}">
-            <img src="{{url_l}}" title="description"/>
+            <img src="{{url_l}}" />
             <div class="carousel-caption">{{description._content}}</div>
           </div>
         {{/each_with_index}}
