--- a/client/views/pages/homan.html
+++ b/client/views/pages/homan.html
@@ -19,27 +19,13 @@
       </aside>
     </article>
   </section>
+
   <section class="beforeafter">
-    <h2>Before and After Photos</h2>
-    <article>
-      {{#with '1'}}
+    <h2>Before and After Photos:</h2>
+    {{#each banum}}
+      <article>
         {{> splitview}}
-      {{/with}}
-    </article>
-    <article>
-      {{#with '2'}}
-        {{> splitview}}
-      {{/with}}
-    </article>
-    <article>
-      {{#with '3'}}
-        {{> splitview}}
-      {{/with}}
-    </article>
-    <article>
-      {{#with '4'}}
-        {{> splitview}}
-      {{/with}}
-    </article>
+      </article>
+    {{/each}}
   </section>
 </template>
