--- a/client/views/widgets/splitview.html
+++ b/client/views/widgets/splitview.html
@@ -1,5 +1,18 @@
 <template name="splitview">
-  {{#each photos}}
-    <img src="{{url_n}}" alt="{{description._content}}">
-  {{/each}}
+  {{#with photos}}
+    {{#with before}}
+    <div class="container" style="height:{{../minheight}}px;">
+      <a class="fancybox" href="{{url_l}}" rel="{{../../this}}">
+        <img src="{{url_n}}" alt="{{description._content}}">
+      </a>
+    </div>
+    {{/with}}
+    {{#with after}}
+    <div class="container" style="height:{{../minheight}}px;">
+      <a class="fancybox" href="{{url_l}}" rel="{{../../this}}">
+        <img src="{{url_n}}" alt="{{description._content}}">
+      </a>
+    </div>
+    {{/with}}
+  {{/with}}
 </template>
