Adjusts photo split view.

--- a/client/views/widgets/splitview.html
+++ b/client/views/widgets/splitview.html
@@ -3,14 +3,14 @@
     {{#with before}}
     <div class="container" style="height:{{../minheight}}px;">
       <a class="fancybox" href="{{url_l}}" rel="{{../../this}}">
-        <img src="{{url_n}}" alt="{{description._content}}">
+        <img src="{{url_m}}" style="height:{{../minheight}}px;" alt="{{description._content}}">
       </a>
     </div>
     {{/with}}
     {{#with after}}
     <div class="container" style="height:{{../minheight}}px;">
       <a class="fancybox" href="{{url_l}}" rel="{{../../this}}">
-        <img src="{{url_n}}" alt="{{description._content}}">
+        <img src="{{url_m}}" style="height:{{../minheight}}px;" alt="{{description._content}}">
       </a>
     </div>
     {{/with}}
