Consolidated testimonial style, added links for testimonials.

--- a/client/views/pages/testimonials.html
+++ b/client/views/pages/testimonials.html
@@ -15,19 +15,23 @@
       <p>
         Whether it is for renovations to historic homes, major remodels, or new construction, I never hesitate to introduce my pickiest clients to Tom Hastings and Hastings Fine Homes for their building needs.
       </p>
-      <aside class="signature">
-        Chris Iverson,<br />
-        Dreyfus Sotheby’s International Realty      
-      </aside>
+      <a href=" http://www.chrisiverson.info/">
+        <aside class="signature">
+          Chris Iverson,<br />
+          Dreyfus Sotheby’s International Realty      
+        </aside>
+      </a>
     </article>
     <article class="testimonial">
       <p>
         Every project we’ve done with Tom and his team has been a delight and has turned out better than we could have hoped.  He sticks to deadlines, personally talks through every potential issue, and basically runs an extremely tight ship while being an extremely nice person to work with.
       </p>
-      <aside class="signature">
-        Chloe Warner,<br />
-        Redmond Aldrich Design     
-      </aside>
+        <a href="http://www.redmondaldrich.com">
+          <aside class="signature">
+            Chloe Warner,<br />
+            Redmond Aldrich Design     
+          </aside>
+        </a>
     </article>
     <article class="testimonial">
     <p>
