--- a/client/views/pages/homan.html
+++ b/client/views/pages/homan.html
@@ -13,10 +13,12 @@
       <p>
 "Tom Hastings was selected as General Contractor for a challenging residential addition and remodel project designed by my firm.  Construction began in late 2008 on the project which included multiple additions and comprehensive updating of a dated ranch-house in Hillsborough, CA.  The design was carefully planned to transform the house into an elegant, but comfortable backdrop for the Owners’ active family lifestyle.  With new additions comprising almost 1,600 sf of new living area, the completed residence is a generous 7,230 sf (5,520 sf of living area) on three levels.  The pre-existing foundations and framing were preserved wherever possible, with areas slated to remain taken down to the studs for a complete upgrading of all systems and finishes.  Tom Hastings and his crew were good with the new construction, with integrating the new areas into the existing structure, and with the critical task of managing the overall process in all of its complexity.  The design included many unique elements and details which required attention and skill far beyond industry standard.  Making it all happen, Tom Hastings worked smoothly with the Owners from start to finish and delivered a gorgeous home to a happy Client.  I’m pleased to recommend Tom Hastings and Hastings Fine Homes to my Clients, and others who are seeking an excellent General Contractor.""
       </p>
-      <aside class="signature">
-        Ellis A. Schoichet AIA<br />
-        EASA Architecture
-      </aside>
+      <a href="http://www.EASAarchitecture.com">
+        <aside class="signature">
+          Ellis A. Schoichet AIA<br />
+          EASA Architecture
+        </aside>
+      </a>
     </article>
   </section>
 
