Updated bootstrap main stylesheet.

--- a/client/main.less
+++ b/client/main.less
@@ -1,5 +1,5 @@
 //Imports
-@import "/packages/bootstrap3-less/bootstrap.lessimport";
+@import "/packages/bootstrap3-less/bootstrap.import.less";
 @import 'views/layout/layout.lessimport';
 @import 'views/layout/header.lessimport';
 @import 'views/layout/nav.lessimport';
